--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.ty.jenkins</groupId>
 	<artifactId>jenkins_example</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<name>jenkins_example</name>
 	<description>Demo project for Spring Boot</description>
 	<url/>
